# swift-ops

./: Makefile  README.md  conftest.py  pyproject.toml
apps/accounts/: admin.py  managers.py  models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_emailverificationtoken.py  0003_user_username_delete_emailverificationtoken.py  0004_user_is_email_verified_user_role_and_more.py  (+1 more)
apps/notifications/: admin.py  consumers.py  models.py  schemas.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/payments/: admin.py  fare.py  models.py  schemas.py  serializers.py  services.py  urls.py  views.py
apps/reports/: admin.py  models.py  schemas.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/rides/: admin.py  apps.py  models.py  schemas.py  serializers.py  services.py  urls.py  utils.py  views.py
apps/templates/: home.html
apps/tracking/: admin.py  consumers.py  models.py  routing.py  schemas.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/vehicles/: admin.py  apps.py  filters.py  models.py  schemas.py  serializers.py  services.py  urls.py  views.py
apps/zones/: admin.py  apps.py  models.py  schemas.py  serializers.py  services.py  urls.py  utils.py  views.py
config/: __init__.py  asgi.py  celery.py  exception_handler.py  middleware.py  urls.py  ws_auth.py
config/settings/: development.py  local.py  production.py
docker/: docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml
tests/: factories.py
(+51 files in other folders)
